--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Westlanderz/DiscordBot#readme",
   "devDependencies": {
-    "@types/node": "^14.14.20"
+    "@types/node": "^14.14.20",
+    "@types/ws": "^7.4.0",
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "discord.js": "github:discordjs/discord.js"
