--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "discord.js": "github:discordjs/discord.js"
+    "@discordjs/opus": "^0.3.3",
+    "bufferutil": "^4.0.3",
+    "discord.js": "github:discordjs/discord.js",
+    "erlpack": "github:discord/erlpack",
+    "libsodium": "^0.7.8",
+    "utf-8-validate": "^5.0.4",
+    "ytdl-core": "^4.4.3",
+    "zlib-sync": "^0.1.7"
   }
 }
