--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node ./dist/bot.js"
+    "start": "tsc && node ./dist/bot.js"
   },
   "repository": {
     "type": "git",
