--- a/src/meson.build
+++ b/src/meson.build
@@ -2,5 +2,7 @@ executable('discordbot',
         ['main.cpp', 'extern.cpp',
          'bot.cpp',
          'commandhandler.cpp',
+         'modules/default.cpp',
+         'commands/help.cpp',
         ]
     )
