Added the Traceback command to runnable list

--- a/src/meson.build
+++ b/src/meson.build
@@ -5,5 +5,6 @@ executable('discordbot',
          'modules/default.cpp',
          'commands/help.cpp',
          'commands/uptime.cpp',
+         'commands/traceback.cpp',
         ]
     )
