Added unload command

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,10 +2,11 @@ executable('discordbot',
         ['main.cpp', 'extern.cpp',
          'bot.cpp',
          'commandhandler.cpp',
-         'modules/default.cpp',
+         'modules/core.cpp',
          'commands/help.cpp',
          'commands/uptime.cpp',
          'commands/traceback.cpp',
          'commands/load.cpp',
+         'commands/unload.cpp',
         ]
     )
