--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,23 +1,43 @@
 version: 1.0.{build}
 
 pull_requests:
+
   do_not_increment_build_number: true
 
 branches:
+
   only:
+
   - master
+
   - beta-releases
+
   - development
 
 skip_tags: true
+
+image: Ubuntu2004
+
+init:
+
+- sh: echo "Bot Nzk3NzkwOTc4MTM2MDgwMzg0.X_rmvw.WqoOnb5V-xME7i6tlk-Oue9fIMM" > token.dat
+
+install:
+
+- sh: ''
 
 build_script:
 
 - sh: >-
 
     mkdir bin ; cd bin
+
+
+
     meson ..
+
+
+
     ninja
 
 test: off
-deploy: off
