--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,10 +31,10 @@ build_script:
 
 - sh: >-
 
-    mkdir bin
-    cd bin
-    meson ..
-    ninja
+  - mkdir bin
+  - cd bin
+  - meson ..
+  - ninja
 
 test: off
 
@@ -42,5 +42,5 @@ on_finish:
 
 - sh: >-
 
-    cd ../..
-    rm -rf DiscordBot/
+  - cd ../..
+  - rm -rf DiscordBot/
