--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,7 +17,7 @@ init:
 - sh: ''
 
 install:
-- sh: sudo apt install meson
+- sh: sudo add-apt-repository ppa:ubuntu-toolchain-r/test ; sudo apt install meson ; sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 --slave /usr/bin/g++ g++ /usr/bin/g++-10 --slave /usr/bin/gcov gcov /usr/bin/gcov-10
 
 
 build_script:
