--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,31 +1,15 @@
 version: 1.0.{build}
-
-pull_requests:
-  do_not_increment_build_number: true
-
 branches:
   only:
   - master
-  - beta-releases
   - development
-
+  - beta-releases
 skip_tags: true
-
-image: Ubuntu2004
-
-init:
-- sh: ''
-
-install:
-- sh: sudo add-apt-repository ppa:ubuntu-toolchain-r/test ; sudo apt install meson ; sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 --slave /usr/bin/g++ g++ /usr/bin/g++-10 --slave /usr/bin/gcov gcov /usr/bin/gcov-10
-
-
 build_script:
-- sh: mkdir bin ; cd bin ; meson .. ; ninja
-
+- sh: >-
+    mkdir bin ; cd bin
+    meson ..
+    ninja
 
 test: off
-
-on_finish:
-
-- sh: cd ../.. ; rm -rf DiscordBot/
+deploy: off
