Added auto doxygen

--- a/meson.build
+++ b/meson.build
@@ -11,4 +11,4 @@ add_project_link_arguments('-lfmt', language: 'cpp')
 subdir('src')
 #subdir('include')
 subdir('tests')
-#subdir('docs')
+subdir('docs')
