Surpress virtual destructor warnings

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,8 @@ add_project_link_arguments('-lcrypto', language: 'cpp')
 add_project_link_arguments('-lpthread', language: 'cpp')
 add_project_link_arguments('-lfmt', language: 'cpp')
 
+add_project_arguments('-Wno-non-virtual-dtor', language : 'cpp')
+
 subdir('src')
 #subdir('include')
 subdir('tests')
