Added reload command to the build list

--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ executable('discordbot',
          'commands/traceback.cpp',
          'commands/load.cpp',
          'commands/unload.cpp',
-         'commands/addadmin.cpp'
+         'commands/addadmin.cpp',
+         'commands/reload.cpp',
         ]
     )
