Added release candidates to the build statuses

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ branches:
   - master
   - development
   - beta-releases
+  - Release-Candidates
 skip_tags: true
 build_script:
 - sh: mkdir bin ; cd bin ; meson .. ; ninja
