--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('Discordbot', 'cpp', version: '0.1.0-a.1')
 
 cpp_compiler = meson.get_compiler('cpp')
-add_project_arguments('--std=c++2a', '-c', '-fcoroutines', '-ggdb', language: 'cpp')
+add_project_arguments('--std=c++20', '-c', '-fcoroutines', '-ggdb', language: 'cpp')
 
 add_project_link_arguments('-lssl', language: 'cpp')
 add_project_link_arguments('-lcrypto', language: 'cpp')
