--- a/config.eg.json
+++ b/config.eg.json
@@ -2,7 +2,7 @@
   "guild_settings": [
     
   ],
-  "intents": "32767",
+  "intents": 32767,
   "owners": ["SenpaiR6#1717"],
   "token": "En2Ga1S3sj8I49G2fbs1gurTAfnzGSWdU6rhQ9L6GS05qaWtsl3nxUXNV96"
 }
